chore(QTDI-2894): S6204 Stream.toList() - potential API break